# ndi-rist-encoder-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  RISTNet.cpp  RISTNet.h  RISTNetInternal.h  Url.cc  UserInterface.cxx  UserInterface.fl  UserInterface.h  cmake2meson.py  mingw-base.cmake  mingw-clang.cmake  mingw-ucrt.cmake  ndi-rist-encoder-ndisdk.cpp  ndi-rist-encoder.cpp  ndi-rist-encoder.h  rist-restreamer.cpp  rist-restreamer.h  threads.h  vcpkg.json
.github/workflows/: ci.yml
apps/ndi-rist-encoder/: CMakeLists.txt  UserInterface.cxx  UserInterface.fl  UserInterface.h  common.h  encode.cpp  encode.h  main.cpp  main.h  transport.cpp  transport.h
apps/ndi-rist-server/: CMakeLists.txt  Url.cc  Url.h  main.cpp  main.h
cmake/: CPM.cmake  FindGStreamer.cmake  FindGstreamer.cmake  FindNDI.cmake  LibFindMacros.cmake  dev-mode.cmake  install-rules.cmake  variables.cmake
fmt/: CMakeLists.txt  fmt.pc
libs/: CMakeLists.txt  oob_shared.c  oob_shared.h  ristreceiver.cpp  ristreceiver.h  ristsender.cpp  ristsender.h
project_libristnet-prefix/src/project_libristnet-stamp/: project_libristnet-gitinfo.txt
project_libristnet-prefix/tmp/: project_libristnet-gitclone.cmake  project_libristnet-gitupdate.cmake
source/: Url.h  UserInterface.cxx  UserInterface.fl  UserInterface.h  lib.cpp  ndi-rist-encoder.cpp  ndi-rist-encoder.h  ndi-rist-server.cpp
source/ndi-rist-encoder/: UserInterface.cxx  UserInterface.fl  UserInterface.h  common.h  encode.cpp  encode.h  main.cpp  main.h  transport.cpp  transport.h
source/ndi-rist-server/: main copy.cpp  main.cpp  main.h
test/: CMakeLists.txt
test/source/: ndi-rist_test.cpp
